# lucydxcpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build_shaders.bat  d7_shaders.hlsl  dxbook.cpp  exercises.cpp  main.cpp  math.cpp  notes.txt  setup-msvc.bat  shaders.hlsl  utils.cpp
Models/mill/: my_mill.mtl
Models/skull/: skull.mtl
Textures/wood/: wood_roughness.tif~
reference_source/: d7sample.cpp  data.h  main.cpp
src/: demo_box.cpp  demo_box.h  demo_hills.cpp  demo_hills.h  demo_light.cpp  demo_light.h  demo_shapes.cpp  demo_shapes.h  dxbook.cpp  exercises.cpp  exercises.h  lucy_math.cpp  lucy_math.h  lucytypes.cpp  lucytypes.h  main.cpp  math.cpp  obj_loader.cpp  obj_loader.h  proj_types.cpp  proj_types.h  renderer.cpp  renderer.h  utils.cpp  utils.h
src/shaders/: basic.fx  color.fx  color_trippy.fx  light_helper.fx  toon.fx
